--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         </div>
 
         <div class="field-group">
-          <label for="overtimeHours">Overtime hours per week</label>
+          <label for="overtimeHours">Hours paid at your overtime rate</label>
           <div class="field-inline">
             <input id="overtimeHours" type="number" min="0" step="0.5" value="0" />
             <span class="suffix">hours</span>
